--- a/app/src/main/res/layout/layout_category_grid_view.xml
+++ b/app/src/main/res/layout/layout_category_grid_view.xml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/android_gridview_custom_layout"
+    android:id="@+id/gridViewLayout_linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="5dp">
             <ImageView
-                android:id="@+id/gridview_image"
+                android:id="@+id/gridViewLayout_gridViewImage"
                 android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@mipmap/ic_launcher" />
+                android:layout_height="40dp" />
 
             <TextView
-                android:id="@+id/gridview_text"
+                android:id="@+id/gridViewText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/grid_image"
+                android:layout_below="@+id/gridViewLayout_gridViewImage"
                 android:layout_marginTop="10dp"
                 android:gravity="center"
                 tools:text="Grid View Item"
